--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start app.js",
-    "stop": "pm2 stop app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "pm2": "^5.4.2"
-  }
+  "dependencies": {}
 }
