update app to use express update deployment scripts

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.19.2",
+    "ws": "^8.18.0"
+  }
 }
