--- a/jeffsimonitto.com.conf
+++ b/jeffsimonitto.com.conf
@@ -1,18 +1,44 @@
 server {
-    # The server configuration block usually includes a listen directive to specify the IP address and port
-    # (or Unix domain socket and path) on which the server listens for requests. Both IPv4 and IPv6 addresses
-    # are accepted; enclose IPv6 addresses in square brackets.
-    listen 80 default_server;
-    # IPv6 address
-    listen [::]:80 default_server;
-
-
-    server_name jeffsimonitto.com;
+    server_name jeffsimonitto.com www.jeffsimonitto.com;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
         proxy_pass http://127.0.0.1:3000/;
     }
 
+    error_page 404 /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/jeffsimonitto.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/jeffsimonitto.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+
+}
+server {
+    if ($host = www.jeffsimonitto.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    if ($host = jeffsimonitto.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    server_name jeffsimonitto.com www.jeffsimonitto.com;
+    return 404; # managed by Certbot
 }
