--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "better-sqlite3": "^11.1.2",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "ws": "^8.18.0"
