--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "better-sqlite3": "^11.1.2",
+    "csv-parse": "^5.5.6",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "ws": "^8.18.0"
