--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@badgateway/oauth2-client": "^2.4.0",
     "@hapi/boom": "^10.0.1",
     "better-sqlite3": "^11.1.2",
     "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "jose": "^5.6.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
