--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "better-sqlite3": "^11.1.2",
+    "better-sqlite3-session-store": "^0.1.0",
     "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
+    "express-session": "^1.18.0",
     "jose": "^5.6.3",
     "ws": "^8.18.0"
   },
